name: xtwee
version: 0.1.0.0

synopsis:            -
description:         -
homepage:            -

license:             OtherLicense
license-file:        LICENSE

-- The package author(s).
author: xax
maintainer: xaxster@gmail.com

category:            Game

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

executable xtwee
  main-is:             xtwee.hs
  other-modules:       Parser
                       Types
  ghc-options:         -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
                       -fno-warn-tabs
                       -Werror
  build-depends:       base,
                       time,
                       directory,
                       executable-path,
                       array,
                       regex-posix,
                       parsec,
                       containers
  default-language:    Haskell2010
