name: xtwee
version: 1.1

synopsis:            -
description:         -
homepage:            -

license:             BSD3
license-file:        LICENSE

-- The package author(s).
author: xax
maintainer: xaxster@gmail.com

category:            Game

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

executable xtwee
  main-is:             xtwee.hs
  other-modules:       Parser
                       Types
  ghc-options:         -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
                       -fno-warn-tabs
                       -Werror
  build-depends:       base,
                       time,
                       directory,
                       executable-path,
                       array,
                       regex-posix,
                       parsec,
                       containers
  default-language:    Haskell2010
